Testing secrets + files

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,43 +1,20 @@
 version: v1.0
-name: Using env_vars per jobs
+name: Using files in secrets in Semaphore 2.0
 agent:
-  machine:
-    type: e1-standard-2
-    os_image: ubuntu1804
-
+   machine:
+     type: e1-standard-2
+     os_image: ubuntu1804
+    
 blocks:
-  - name: Using Local Environment variables only
-    task:
+   - name: Using secrets
+   task:
       jobs:
-      - name: Job that uses local env_vars
-        commands:
-          - echo $APP_ENV
-        env_vars:
-          - name: APP_ENV
-            value: This is APP_ENV
-          - name: VAR_2
-            value: This is VAR_2 from First Job
-
-  - name: Both local end global env_vars
-    task:
-      env_vars:
-        - name: APP_ENV
-          value: prod
-        - name: VAR_1
-          value: VAR_1 from outer env_vars
-      jobs:
-      - name: Using both global and local env_vars
-        commands:
-          - echo $VAR_1
-          - echo $VAR_2
-          - echo $APP_ENV
-        env_vars:
-          - name: VAR_1
-            value: This is VAR_1
-          - name: VAR_2
-            value: This is VAR_2
-      - name: Second job - no local env_vars
-        commands:
-          - echo $VAR_1
-          - echo $APP_ENV
+        - name: Using server_key
+          commands:
+            - checkout
+            - chmod 600 ~/.ssh/server_key
+            - cat ~/.ssh/server_key
+            - ssh -i ~/.ssh/server_key username@server
+      secrets:
+        - name: ssh-keys
 
