--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,6 +12,7 @@ blocks:
       - name: Job that uses local env_vars
         commands:
           - echo $APP_ENV
+          - ls -l ~/.ssh
         env_vars:
           - name: APP_ENV
             value: This is APP_ENV
